@@ -3,7 +3,7 @@
 	<name>Alpha</name>
 	<libraryname>alpha</libraryname>
 	<description>Alpha Demonstration Library</description>
-	<creationDate>21-Sep-2007</creationDate>
+	<creationDate>July 2008</creationDate>
 	<author>John Doe</author>
 	<authorEmail>john.doe@example.org</authorEmail>
 	<authorUrl>http://www.example.org</authorUrl>
