@@ -1,0 +1,2 @@
+# Alpha Demonstration System Plugin Installation Language File
+ALPHA PLUGIN=Alpha Demonstration System Plugin
