@@ -15,6 +15,9 @@ $ -> Language fix or change
 ! -> Note
 
 
+17-Jul-2008 Sam Moffatt
+ + Added a system plugin, an interesting day!
+
 16-Jul-2008 Sam Moffatt
  + Added simple library
 
